@startuml juliendsystemmodel

' ======= Style / Layout Tweaks =======

hide empty members

skinparam {
  Style StrictUML

  ' use characters instead of icons for showing visibility
  ClassAttributeIconSize 0

  ' make the stereotypes less ugly
  ClassStereotypeFont {
    Size 10
    Style plain
  }

  ' make boxes slightly less pointy
  RoundCorner 5

  ' make everything slightly less cramped
  Padding 2

  ' vertical spacing (make room for labels)
  RankSep 100

  ' horizontal spacing (make room for labels)
  NodeSep 120
}

' ======= Classes =======

class "EnrollmentMenu" as menu <<form>> {
 -btnEnrolStudent : JButton
 -btnEnrolStudentInDegree : JButton
 -btnEnrolStudentInClasses : JButton
}
class "EnrolStudentInDegree" as enrolStudent <<form>> {
  - txtStudentId : JTextField
  - cmbDegreeName : JComboBox
  - cmbEnrollmentStatus : JComboBox
  - btnFindStudent : JButton
  - btnSave : JButton
  - btnCancel : JButton
--
  + displayForm() : void
  + populateSpecies(species : Collection<String>) : void
}
class "schoolDataStore" as schoolData <<data store>> {
--
  + getDegreeNames() : Collection<String>
  + getDegreeEnrolmentStatuses() : Collection<String>
  + findStudent(studentId : String) : Student
  + enrolStudentInDegree(student : Student, degreeEnrolment : DegreeEnrolment) : void
  + saveEnrolment(enrolment : Enrolment) : void
}

class "Student" as student <<domain>>

' ======= Relationships =======

menu -> "-studentForm \r1 " enrolStudent
enrolStudent --> "-dataStore     \r1     " schoolData
enrolStudent --> "-student \r1 " student

@enduml